--- a/Task1/Task1.csproj
+++ b/Task1/Task1.csproj
@@ -46,9 +46,14 @@
     <Compile Include="ClassEvent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Files\Events_and_countstud.txt" />
+    <Content Include="Files\Students.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
